# HandWork

./: .gitignore  README.md
DataBank/:   计划.xls  JSON.md  机器人问题排查.md  灵巧手控制接口协议格式v1.md  计划.md
Tests/: MultiBagReader.py  bag_reader.py
Tests/motor_command.bag/: metadata.yaml  motor_command.bag_0.mcap
hand_ws/: 1.txt
hand_ws/install/: local_setup.sh  setup.sh
hand_ws/install/httplib/lib/cmake/httplib/: httplibTargets.cmake
hand_ws/install/httplib/share/httplib/: package.dsv  package.ps1  package.sh
hand_ws/install/motor_control/share/ament_index/resource_index/package_run_dependencies/: motor_control
hand_ws/install/motor_control/share/ament_index/resource_index/parent_prefix_path/: motor_control
hand_ws/install/motor_control/share/motor_control/: local_setup.sh  package.sh
hand_ws/install/motor_control_command_msgs/include/motor_control_command_msgs/motor_control_command_msgs/msg/detail/: motor__description.c  motor__rosidl_typesupport_fastrtps_c.h  motor__rosidl_typesupport_fastrtps_cpp.hpp  motor__struct.h  motor__struct.hpp  motor__traits.hpp  motor__type_support.c  motor__type_support.h  motor_control_command__builder.hpp  motor_control_command__description.c  motor_control_command__functions.c  motor_control_command__functions.h  motor_control_command__struct.h  motor_control_command__struct.hpp  motor_control_command__traits.hpp  motor_control_command__type_support.h
hand_ws/install/motor_control_command_msgs/share/motor_control_command_msgs/: package.dsv  package.ps1  package.sh
hand_ws/install/motor_control_command_msgs/share/motor_control_command_msgs/cmake/: export_motor_control_command_msgs__rosidl_generator_cExport-noconfig.cmake  export_motor_control_command_msgs__rosidl_generator_cExport.cmake  export_motor_control_command_msgs__rosidl_generator_cppExport.cmake  export_motor_control_command_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_motor_control_command_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_motor_control_command_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  motor_control_command_msgsConfig.cmake  motor_control_command_msgs__rosidl_typesupport_cExport.cmake  motor_control_command_msgs__rosidl_typesupport_cppExport.cmake  motor_control_command_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  motor_control_command_msgs__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
hand_ws/install/motor_control_command_msgs/share/motor_control_command_msgs/msg/: Motor.json  MotorControlCommand.json
hand_ws/install/nlohmann_json/share/nlohmann_json/: package.sh
hand_ws/install/nlohmann_json/share/pkgconfig/: nlohmann_json.pc
hand_ws/log/: latest_build
hand_ws/src/multi_motor_ros2/motor_control/: CMakeLists.txt
hand_ws/src/multi_motor_ros2/motor_control/launch/: adapter_launch.xml
hand_ws/src/multi_motor_ros2/motor_control/src/: adapter_http.cpp  deal_http.cpp  motor_control_state.cpp  send_motor_command.cpp
hand_ws/src/multi_motor_ros2/motor_control_v2/: CMakeLists.txt  config.json  package.xml
hand_ws/src/multi_motor_ros2/motor_control_v2/include/motor_control_v2/: HttpServer.hpp  MotorControl.hpp  SerialCommunication.hpp
hand_ws/src/multi_motor_ros2/motor_control_v2/src/: HttpServer.cpp  MotorControl.cpp  SerialCommunication.cpp  main.cpp
hand_ws/src/multi_motor_ros2/motor_status/: CMakeLists.txt
hand_ws/src/multi_motor_ros2/motor_status/src/: motor_status.cpp
